# fools

./: README.md  mise.toml  pyproject.toml
fools/: main.py
fools/finance/: calculator.py
src/fools/: main.py
src/fools/finance/: commands.py
tests/finance/: test_calculator.py
tests/fools/finance/: test_calculator.py
